syntax = "proto3";

import "game/model.proto";

package game_messages;


message GamePlayerMessage {
  oneof payload {
    GamePlayerShotMessage shot = 1;
  }
}


message GamePlayerShotMessage {
    int32 row = 1;
    int32 column = 2;
}


message GameServerMessage {
  oneof payload {
    GameServerStateMessage game_state = 1;
    GameServerShotResultMessage shot_result = 2;
    GameServerShotMessage shot = 3;
    GameServerTurnMessage turn = 4;
    GameServerGameOverMessage game_over = 5;
  }
}

message GameServerStateMessage {
    game_models.ShipGridView own_grid = 1;
    game_models.ShipGridView opponent_grid = 2;
}

message GameServerShotResultMessage {
    GameServerShotMessage shot = 1;
    bool is_hit = 3;
    optional game_models.ActiveShip sunk_ship = 4;
}

message GameServerShotMessage {
    int32 row = 1;
    int32 column = 2;
}

message GameServerTurnMessage {
  bool opponents_turn = 1;
}

enum GameOverResult {
  UNKNOWN = 0;
  WIN = 1;
  LOSS = 2;
  PREMATURE = 3;  
}  

message GameServerGameOverMessage {
  
  GameOverResult result = 1;
}
